<resources>
    <string name="app_name">ManajemenStok</string>
    <string name="menu_beranda">Beranda</string>
    <string name="menu_barang">Barang</string>
    <string name="menu_riwayat">Riwayat</string>
    <string name="menu_kas">Kas</string>
    <string name="menu_akun">Akun</string>
    <string name="imgHeader">gambar</string>
    <string name="textHeader">Manajemen Stok</string>
    <string name="txtMenuPembelian">Pembelian</string>
    <string name="txtMenuPenjualan">Penjualan</string>

    <string name="labelEditTextBarang">Nama Barang</string>
    <string name="hintEditTextBarang">Masukkan Nama Barang</string>
    <string name="btnInputBarang">SIMPAN BARANG</string>

    <string name="labelSearchBarBarang">Cari berdasarkan Nama Barang</string>

    <string name="defaultImageIcon">https://cdn.pixabay.com/photo/2014/04/03/10/55/t-shirt-311732_1280.png</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>


</resources>
