<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_beranda"
        android:icon="@drawable/ic_action_home"
        android:title="@string/menu_beranda" />

    <item
        android:id="@+id/navigation_barang"
        android:icon="@drawable/ic_action_work"
        android:title="@string/menu_barang" />

    <item
        android:id="@+id/navigation_riwayat"
        android:icon="@drawable/ic_action_assignment"
        android:title="@string/menu_riwayat" />

    <item
        android:id="@+id/navigation_kas"
        android:icon="@drawable/ic_action_money"
        android:title="@string/menu_kas" />


    <item
        android:id="@+id/navigation_akun"
        android:icon="@drawable/ic_action_account"
        android:title="@string/menu_akun" />

</menu>